# ceng477

./: TCAN_Lectures.txt
Previous Exam Questions/: 2020-2021 Midterm.webarchive
hw1/RayTracer/: bunny.ppm  cornellbox_front.ppm  killeroo.ppm  killeroo161556.ppm  killeroosecond.ppm  parser.cpp  parser.h  raytracer  raytracer.cpp  simple.ppm  vectorOperations.cpp
hw1/RayTracer 2/: CMakeLists.txt  bunny.ppm  parser.h  raytracer  raytracer.cpp
hw1/RayTracer 3/: cornellbox_front.ppm  killeroofirsttrial.ppm  raytracer  raytracer.cpp  simple.ppm
hw1/RayTracerbackup/: cornellbox_front.ppm  cornellbox_front22.ppm  parser.cpp  parser.h  raytracer  raytracer.cpp  vectorOperations.cpp
hw2/files/: CMakeLists.txt  MappingData.cpp  MappingData.h  abssiz.ppm  hit_record.h  integrator.cpp  integrator.h  jpeg.cpp  material.cpp  material.h  matrix.cpp  matrix.h  mesh.cpp  mesh.h  parser.cpp  raytracer  rotation.cpp  rotation.h  scaling.cpp  scaling.h  scene.cpp  scene.h  simple_transform.xml  sphere.cpp  sphere.h  texture.h  transformInfo.cpp  translation.cpp  translation.h  triangle.cpp  triangle.h  vector2f.h  vector3f.h
hw2/files/hw2_sample_scenes/: skybox.xml
hw3/Assignment3/Source/: main.cpp  parser.cpp  parser.h  vector.h
hw3/GLFW_examples/depthastexture/: Makefile_OSX  depthShader.frag  depthShader.vs  simple.frag  simple.vs  spheres.c
hw3/GLFW_examples/terrainvisibility/: shader.frag  shader.vert  simple.frag  simple.vs  terrain.c
hw3/GLFW_examples/test/: test.c
hw3/GLFW_examples/textureExample/: howToCompile.txt  texture.c  texture.fs  texture.vs
hw4/: hw4  run.sh
